--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "chai-backend",
   "version": "1.0.0",
+  "type": "module",
   "description": "A Backend project by the hitesh - youtube",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "javascript",
     "Backend"
   ],
   "author": "Busari kiran kumar",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  }
 }
